<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margen_general"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/WidthEight_Foto"
                android:layout_height="@dimen/WidthEight_Foto"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/marginTopButton_Foto"
                />


            <!-- =========== Start :: Nombre ============ -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_account_circle_24"
                app:startIconTint="@color/marine_500"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_check_circle_24" >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etNombre"
                    android:layout_marginBottom="@dimen/marginBottom_Datos"
                    app:hintAnimationEnabled="true"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!-- =========== End :: Nombre ============ -->


            <!-- =========== Start :: Fecha Nacimiento ============ -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:startIconTint="@color/marine_500"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_check_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/etNacimiento"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/marginBottom_Datos"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!-- =========== End :: Fecha Nacimiento ============ -->


            <!-- =========== Start :: Télefono ============ -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_settings_phone_24"
                app:startIconTint="@color/marine_500"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_check_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/etTelefono"
                    android:layout_marginBottom="@dimen/marginBottom_Datos"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!-- =========== End :: Télefono ============ -->


            <!-- =========== Start E-mail ============ -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_mail_24"
                app:startIconTint="@color/marine_500"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_check_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/etEmail"
                    android:layout_marginBottom="@dimen/marginBottom_Datos"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- =========== End E-mail ============ -->


            <!-- =========== Start :: Descripción ============ -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_description_24"
                app:startIconTint="@color/marine_500"
                app:startIconContentDescription="@string/btnSiguiente"
                app:counterEnabled="true"
                app:counterMaxLength="120"
                app:errorEnabled="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_check_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/etDescripcion"
                    android:layout_marginBottom="@dimen/marginBottom_Datos"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- =========== End :: Descripción ============ -->


            <!-- =========== Start :: Botón Siguiente ============ -->
            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_ButtonSiguiente"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="textEnd"
                android:text="@string/btnSiguiente" />
            <!-- =========== End :: Botón Siguiente ============ -->

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>